# openrouter-toolkit

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/openrouter-macros/: Cargo.toml
crates/openrouter-macros/src/: lib.rs
crates/openrouter-macros/src/expand/: mod.rs  tests.rs
crates/openrouter-macros/src/input/: tests.rs
crates/openrouter-macros/tests/: proc_macros.rs
crates/openrouter-macros/tests/ui/: capability__duplicate.rs  capability__unknown_name.rs  capability__unknown_name.stderr  capability__unknown_name_no_suggestion.rs  capability__unknown_namespace.rs  capability__unknown_namespace.stderr  lookup__all_missing.rs  lookup__all_missing.stderr  lookup__dynamic_variant_missing.rs  lookup__dynamic_variant_missing.stderr  lookup__input_modality_missing.rs  lookup__input_modality_missing.stderr  lookup__param_missing.rs  lookup__param_missing.stderr  lookup__stacked_dynamic_variant_missing.rs  lookup__stacked_dynamic_variant_missing.stderr  lookup__static_variant_unknown.rs  lookup__static_variant_unknown.stderr  lookup__unknown_model.rs  lookup__unknown_model.stderr  parse__generic_arguments.rs  parse__generic_arguments.stderr  parse__leading_colon.rs  parse__leading_colon.stderr  parse__missing_comma.rs  parse__missing_comma.stderr  parse__no_capability.rs  parse__no_capability.stderr  parse__non_literal_model.rs  parse__path_wrong_arity.rs  parse__path_wrong_arity.stderr  pass__cross_namespace_same_name.rs  pass__dynamic_variant.rs  pass__input_modality.rs  pass__multiple.rs  (+5 more)
crates/openrouter-models/: Cargo.toml
crates/openrouter-models/data/: models.json
crates/openrouter-models/src/: lib.rs  test_support.rs  tests.rs
(+82 files in other folders)
