[workspace]
default-members = [".", "crates/openrouter-models", "crates/openrouter-macros"]
members = ["crates/openrouter-models", "crates/openrouter-macros"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
openrouter-macros = { path = "crates/openrouter-macros" }
openrouter-models = { path = "crates/openrouter-models" }

proc-macro2 = "1"
quote = "1"
rstest = "0.26"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
trybuild = "1"

[package]
name = "openrouter-toolkit"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
openrouter-macros = { workspace = true }
openrouter-models = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
