[package]
name = "openrouter-macros"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
openrouter-models = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
trybuild = { workspace = true }
