[package]
name = "openrouter-models"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
schemars = { workspace = true }
